samples/_failures_safe/1761633545_6d8242_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3ce2f2e.c: In function ‘main’:
./samples/SAFE/__tmp_f3ce2f2e.c:164:19: error: missing terminating " character
  164 |         if (scanf("%d %
      |                   ^~~~~
./samples/SAFE/__tmp_f3ce2f2e.c:164:9: error: expected expression at end of input
  164 |         if (scanf("%d %
      |         ^~
./samples/SAFE/__tmp_f3ce2f2e.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3ce2f2e.c:164:9: error: expected declaration or statement at end of input
